[gd_scene load_steps=7 format=3 uid="uid://d10f0k62alknb"]

[ext_resource type="Script" path="res://Content/Demo/Assets/Aesthetics/ElectricShock/ElectrickShockModel.gd" id="1_m2v6n"]
[ext_resource type="Shader" uid="uid://by23absjdvkmu" path="res://Content/Demo/Assets/Aesthetics/ElectricShock/LightningShader.tres" id="1_sdmm2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_slblk"]
resource_name = "LightningMaterial"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_wvqpl"]
_surfaces = [{
"aabb": AABB(-1.75588, -0.418872, -1.00926, 4.18965, 0.837745, 2.00927),
"format": 34896613377,
"index_count": 114,
"index_data": PackedByteArray(4, 0, 2, 0, 39, 0, 39, 0, 2, 0, 3, 0, 0, 0, 22, 0, 1, 0, 0, 0, 21, 0, 22, 0, 21, 0, 23, 0, 22, 0, 21, 0, 20, 0, 23, 0, 20, 0, 24, 0, 23, 0, 20, 0, 19, 0, 24, 0, 19, 0, 18, 0, 24, 0, 24, 0, 18, 0, 25, 0, 18, 0, 17, 0, 25, 0, 25, 0, 17, 0, 26, 0, 17, 0, 16, 0, 26, 0, 26, 0, 16, 0, 27, 0, 16, 0, 15, 0, 27, 0, 27, 0, 15, 0, 28, 0, 15, 0, 14, 0, 28, 0, 28, 0, 14, 0, 29, 0, 14, 0, 13, 0, 29, 0, 29, 0, 13, 0, 30, 0, 13, 0, 31, 0, 30, 0, 13, 0, 12, 0, 31, 0, 12, 0, 32, 0, 31, 0, 12, 0, 11, 0, 32, 0, 11, 0, 10, 0, 32, 0, 32, 0, 10, 0, 33, 0, 10, 0, 34, 0, 33, 0, 10, 0, 9, 0, 34, 0, 9, 0, 8, 0, 34, 0, 34, 0, 8, 0, 35, 0, 8, 0, 36, 0, 35, 0, 8, 0, 7, 0, 36, 0, 7, 0, 37, 0, 36, 0, 7, 0, 6, 0, 37, 0, 6, 0, 38, 0, 37, 0, 6, 0, 5, 0, 38, 0, 5, 0, 39, 0, 38, 0, 5, 0, 4, 0, 39, 0),
"name": "LightningMaterial",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray(50, 64, 255, 127, 254, 255, 0, 0, 170, 150, 255, 127, 254, 255, 0, 0, 218, 57, 235, 248, 46, 1, 0, 0, 60, 156, 19, 7, 0, 0, 0, 0, 148, 70, 72, 167, 53, 14, 0, 0, 204, 106, 255, 127, 135, 28, 0, 0, 159, 126, 255, 127, 118, 42, 0, 0, 235, 69, 255, 127, 211, 54, 0, 0, 113, 16, 255, 127, 162, 67, 0, 0, 58, 22, 60, 166, 66, 81, 0, 0, 168, 10, 127, 237, 114, 95, 0, 0, 0, 0, 12, 189, 18, 109, 0, 0, 158, 59, 87, 161, 225, 121, 0, 0, 233, 125, 164, 204, 73, 135, 0, 0, 33, 133, 239, 149, 180, 148, 0, 0, 125, 97, 228, 25, 30, 162, 0, 0, 219, 29, 172, 80, 134, 175, 0, 0, 51, 17, 159, 212, 240, 188, 0, 0, 253, 41, 255, 255, 89, 202, 0, 0, 198, 74, 121, 140, 76, 215, 0, 0, 127, 101, 255, 127, 44, 229, 0, 0, 236, 78, 255, 127, 207, 244, 0, 0, 190, 188, 255, 127, 184, 244, 0, 0, 64, 233, 255, 127, 44, 229, 0, 0, 51, 198, 216, 47, 76, 215, 0, 0, 40, 138, 0, 0, 89, 202, 0, 0, 211, 132, 89, 78, 240, 188, 0, 0, 67, 151, 228, 127, 134, 175, 0, 0, 229, 203, 26, 230, 30, 162, 0, 0, 97, 255, 137, 142, 180, 148, 0, 0, 131, 239, 90, 51, 73, 135, 0, 0, 112, 181, 95, 128, 225, 121, 0, 0, 200, 123, 141, 128, 18, 109, 0, 0, 89, 131, 194, 89, 114, 95, 0, 0, 235, 142, 127, 18, 66, 81, 0, 0, 157, 140, 165, 77, 162, 67, 0, 0, 32, 192, 255, 127, 211, 54, 0, 0, 255, 255, 255, 127, 118, 42, 0, 0, 97, 243, 255, 127, 135, 28, 0, 0, 241, 193, 97, 46, 138, 13, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_hu7na"]
resource_name = "PraedatumShockModel_Plane"
_surfaces = [{
"aabb": AABB(-1.75588, -0.418872, -1.00926, 4.18965, 0.837745, 2.00927),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 121, 13, 0, 0, 242, 26, 0, 0, 107, 40, 0, 0, 228, 53, 0, 0, 94, 67, 0, 0, 215, 80, 0, 0, 80, 94, 0, 0, 201, 107, 0, 0, 66, 121, 0, 0, 188, 134, 0, 0, 53, 148, 0, 0, 174, 161, 0, 0, 39, 175, 0, 0, 160, 188, 0, 0, 26, 202, 0, 0, 147, 215, 0, 0, 12, 229, 0, 0, 133, 242, 255, 255, 133, 242, 255, 255, 12, 229, 255, 255, 147, 215, 255, 255, 26, 202, 254, 255, 160, 188, 255, 255, 39, 175, 255, 255, 174, 161, 255, 255, 53, 148, 255, 255, 188, 134, 255, 255, 66, 121, 255, 255, 201, 107, 254, 255, 80, 94, 255, 255, 215, 80, 255, 255, 94, 67, 255, 255, 228, 53, 255, 255, 107, 40, 255, 255, 242, 26, 255, 255, 121, 13),
"format": 34896613399,
"index_count": 114,
"index_data": PackedByteArray(4, 0, 2, 0, 39, 0, 39, 0, 2, 0, 3, 0, 0, 0, 22, 0, 1, 0, 0, 0, 21, 0, 22, 0, 21, 0, 23, 0, 22, 0, 21, 0, 20, 0, 23, 0, 20, 0, 24, 0, 23, 0, 20, 0, 19, 0, 24, 0, 19, 0, 18, 0, 24, 0, 24, 0, 18, 0, 25, 0, 18, 0, 17, 0, 25, 0, 25, 0, 17, 0, 26, 0, 17, 0, 16, 0, 26, 0, 26, 0, 16, 0, 27, 0, 16, 0, 15, 0, 27, 0, 27, 0, 15, 0, 28, 0, 15, 0, 14, 0, 28, 0, 28, 0, 14, 0, 29, 0, 14, 0, 13, 0, 29, 0, 29, 0, 13, 0, 30, 0, 13, 0, 31, 0, 30, 0, 13, 0, 12, 0, 31, 0, 12, 0, 32, 0, 31, 0, 12, 0, 11, 0, 32, 0, 11, 0, 10, 0, 32, 0, 32, 0, 10, 0, 33, 0, 10, 0, 34, 0, 33, 0, 10, 0, 9, 0, 34, 0, 9, 0, 8, 0, 34, 0, 34, 0, 8, 0, 35, 0, 8, 0, 36, 0, 35, 0, 8, 0, 7, 0, 36, 0, 7, 0, 37, 0, 36, 0, 7, 0, 6, 0, 37, 0, 6, 0, 38, 0, 37, 0, 6, 0, 5, 0, 38, 0, 5, 0, 39, 0, 38, 0, 5, 0, 4, 0, 39, 0),
"material": SubResource("StandardMaterial3D_slblk"),
"name": "LightningMaterial",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 40,
"vertex_data": PackedByteArray(50, 64, 255, 127, 254, 255, 255, 191, 170, 150, 255, 127, 254, 255, 255, 191, 218, 57, 235, 248, 46, 1, 52, 214, 60, 156, 19, 7, 0, 0, 11, 214, 148, 70, 72, 167, 53, 14, 150, 40, 204, 106, 255, 127, 135, 28, 175, 223, 159, 126, 255, 127, 118, 42, 255, 191, 235, 69, 255, 127, 211, 54, 228, 157, 113, 16, 255, 127, 162, 67, 212, 180, 58, 22, 60, 166, 66, 81, 6, 212, 168, 10, 127, 237, 114, 95, 30, 190, 0, 0, 12, 189, 18, 109, 239, 179, 158, 59, 87, 161, 225, 121, 37, 204, 233, 125, 164, 204, 73, 135, 14, 223, 33, 133, 239, 149, 180, 148, 98, 39, 125, 97, 228, 25, 30, 162, 14, 228, 219, 29, 172, 80, 134, 175, 109, 226, 51, 17, 159, 212, 240, 188, 115, 217, 253, 41, 255, 255, 89, 202, 90, 206, 198, 74, 121, 140, 76, 215, 38, 27, 127, 101, 255, 127, 44, 229, 62, 211, 236, 78, 255, 127, 207, 244, 255, 191, 190, 188, 255, 127, 184, 244, 255, 191, 64, 233, 255, 127, 44, 229, 131, 220, 51, 198, 216, 47, 76, 215, 234, 229, 40, 138, 0, 0, 89, 202, 109, 222, 211, 132, 89, 78, 240, 188, 164, 39, 67, 151, 228, 127, 134, 175, 213, 228, 229, 203, 26, 230, 30, 162, 198, 214, 97, 255, 137, 142, 180, 148, 46, 218, 131, 239, 90, 51, 73, 135, 207, 219, 112, 181, 95, 128, 225, 121, 26, 223, 200, 123, 141, 128, 18, 109, 238, 191, 89, 131, 194, 89, 114, 95, 54, 222, 235, 142, 127, 18, 66, 81, 193, 201, 157, 140, 165, 77, 162, 67, 38, 167, 32, 192, 255, 127, 211, 54, 210, 189, 255, 255, 255, 127, 118, 42, 255, 191, 97, 243, 255, 127, 135, 28, 176, 195, 241, 193, 97, 46, 138, 13, 69, 225, 249, 255, 244, 127, 255, 255, 255, 127, 7, 230, 137, 110, 8, 229, 248, 107, 167, 232, 10, 115, 29, 247, 104, 119, 255, 255, 255, 127, 68, 250, 219, 123, 155, 236, 111, 120, 104, 238, 24, 116, 242, 235, 17, 118, 5, 236, 99, 118, 159, 247, 249, 122, 67, 245, 150, 122, 175, 247, 11, 135, 6, 249, 51, 141, 212, 246, 62, 117, 173, 236, 125, 112, 167, 225, 99, 108, 81, 238, 14, 118, 189, 252, 0, 125, 249, 255, 243, 127, 248, 255, 242, 127, 214, 252, 254, 126, 2, 249, 146, 123, 120, 229, 198, 106, 190, 238, 38, 120, 116, 239, 93, 145, 72, 251, 30, 141, 214, 247, 125, 118, 14, 242, 149, 115, 142, 241, 197, 115, 182, 242, 97, 121, 82, 238, 41, 115, 61, 238, 80, 118, 57, 240, 212, 121, 191, 255, 224, 127, 255, 255, 255, 127, 33, 255, 149, 127, 178, 246, 211, 122)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wvqpl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_382nt"]
render_priority = 0
shader = ExtResource("1_sdmm2")

[node name="ElectricShockModel" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_m2v6n")

[node name="LightningPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, -0.32, 1.50996e-07, 0, -4.83187e-08, -1, 0, 0.243, -1)
visible = false
mesh = SubResource("ArrayMesh_hu7na")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_382nt")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
